# academic_retrieval

./: agent_test.py  docker-compose.yml  log.txt  milvus_test.py  pdf_processing_test.py  pyproject.toml  rag_optimization_report.md  rag_recall_test.py  rag_test.py  requirements.txt  retrieval_history.db  test.py  workflow_test.py
.marscode/: deviceInfo.json
llm/: agents.py  chat_academic.py  llm_config.py  react_agent.py  tools.py
llm/rag/: data_preparation.py  embedding_model.py  index_construction.py  index_optimization.py  rag_config.py
res/output/: mindmap.md
vibecoding/: PROMPT_agent_establishment.md
volumes/etcd/member/snap/: 0000000000000012-000000000000c351.snap
volumes/milvus/data/cache/21/local_chunk/: seg_465114399686950168_cg_103_13
volumes/minio/.minio.sys/: format.json
volumes/minio/.minio.sys/tmp/.trash/0bc7e6d1-9c88-42fa-9147-a8dd6930a401/: xl.meta.bkp
volumes/minio/.minio.sys/tmp/.trash/11432d91-1a8a-416f-ba7b-589eb70c5c38/: xl.meta.bkp
volumes/minio/.minio.sys/tmp/.trash/14f4eb9e-ebc7-42d6-8465-5041dee92cc5/: xl.meta.bkp
volumes/minio/.minio.sys/tmp/.trash/22d55bb3-69ae-4bf7-b20a-a2b39662b409/: xl.meta.bkp
volumes/minio/.minio.sys/tmp/.trash/25668a67-d111-47c6-891b-9ca789cbbe69/: xl.meta.bkp
volumes/minio/.minio.sys/tmp/.trash/2aacab41-dc96-42dd-85bf-cd254d81a61b/: xl.meta.bkp
volumes/minio/.minio.sys/tmp/.trash/2bc4ed09-1cf3-45e2-9321-0970cc46d207/: xl.meta.bkp
volumes/minio/.minio.sys/tmp/.trash/2cd34dcd-ac23-4ed4-941d-89386d9f9486/: xl.meta.bkp
(+154 files in other folders)
