[project]
name = "academic-retrieval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain>=1.2.6",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.0",
    "langchain-ollama>=1.0.1",
    "pdfplumber>=0.11.9",
    "pymilvus>=2.6.6",
    "langchain-milvus",
    "sentence-transformers"
]
